Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignObjectTextObjField.quorum
class Main
    Text v
    action Main
        v:SetValue(text)
        Test(v)
    end

    action Test(Object var)
        if var:GetValue() = text
            output "passed"
        end
    end
end
