Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBoolObjTextObjField.quorum
class Main
    Text v
    action Main
        v:SetValue(text)
        Test(v)
    end

    action Test(Boolean var)
    end
end
